[package]
name = "rusty-jokes"
version = "0.1.0"
edition = "2018"
authors = ["Ralf Biedert <rb@xr.io>"]
description = "A humorous Rust crate that brings joy and entertainment to Rust programmers with features like Laughable Lifetimes, Comedic Concurrency, and Punchline Pointers."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ralfbiedert/rusty-jokes"
readme = "README.md"
keywords = ["humor", "jokes", "rust", "april-fools"]

[dependencies]